[package]
name = "build_java_bindings"
version = "0.1.0"
rust-version = "1.63"
edition = "2021"

[[bin]]
name = "build_java_bindings"
path = "./build_java_bindings.rs"

[dependencies]
handlebars = "^4.3.0"
heck = "^0.4"
regex = ">= 1.9, <= 1.9.6"
serde =  { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
