[package]
name = "build_python_bindings"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "build_python_bindings"
path = "./build_python_bindings.rs"

[dependencies]
handlebars = "4.3"
heck = "0.4"
regex = "1.9"
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
